[package]
name = "syxpack"
version = "0.4.0"
edition = "2018"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
license = "MIT"
description = """
Helpers for processing MIDI System Exclusive messages.
"""
repository = "https://github.com/coniferprod/syxpack-rs"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"
bit = "0.1.1"
