[package]
name = "syxpack"
version = "0.11.0"
edition = "2021"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
license = "MIT"
description = """
Helpers for processing MIDI System Exclusive messages.
"""
repository = "https://github.com/coniferprod/syxpack-rs"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
bit = "0.1.1"
hex = "0.4.3"
md5 = "0.7.0"

[[bin]]
name = "syxidentify"

[[bin]]
name = "syxsplit"

[[bin]]
name = "syxextract"

[[bin]]
name = "syxsections"

[[bin]]
name = "syxreceive"
