[package]
name = "syxpack"
version = "0.17.0"
edition = "2021"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
license = "MIT"
description = """
Helpers for processing MIDI System Exclusive messages.
"""
repository = "https://github.com/coniferprod/syxpack-rs"

[dependencies]
lazy_static = "1.5.0"
hex = "0.4.3"
md5 = "0.7.0"
nybble = "0.1.1"
